# funding

./: .gitignore  AI_ASSISTANT_README.md  PLATFORM_IMPROVEMENTS.md  README.md  SECURITY_AUDIT_REPORT.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js
.kiro/steering/: agent.md
python-service/: .gitignore  AGENTIC_FLOW_VERIFICATION.md  DEVELOPMENT.md  Dockerfile  LANGGRAPH_AGENTIC_IMPLEMENTATION.md  README.md  REWRITTEN_AGENT_README.md  docker-compose.yml  install_dependencies.py  main.py  pyproject.toml  requirements.txt  setup.py  start.py  test_agentic_flow.py  test_langgraph_v2.py  test_microsoft_query.py  test_rewritten_agent.py  test_sheets_connection.py  verify_rewritten_agent.py
python-service/app/: __init__.py
python-service/app/api/v1/: api.py
python-service/app/api/v1/endpoints/: health.py  langgraph.py  langgraph_v2.py  targets.py
python-service/app/core/: config.py  logging.py
python-service/app/models/: __init__.py  entities.py  workflow.py
python-service/app/repositories/: __init__.py  base_repository.py  contribution_repository.py  funder_repository.py  prospect_repository.py  repository_factory.py  school_repository.py  state_repository.py  state_target_repository.py
python-service/app/services/: langgraph_service.py  langgraph_service_v2.py  sheets_client.py  target_management_service.py
python-service/app/workflows/: __init__.py  base_nodes.py  crud_workflow.py  engine.py  langgraph_agent.py  query_workflow.py
python-service/tests/: test_health.py  test_repositories.py  test_sheets_client.py
scripts/: seed-corrected-data.js  seed-final-data.js  seed-real-data.js  seed-sheets.js  setup-env.js  setup-sheets.js  test-app.js  test-connection.js  test-data.js  update-exact-states.js  update-state-management.js
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
(+82 files in other folders)
